# ds-bot

./: .env.example  .gitignore  README.md  config.py  discord_handlers.py  file.tmp  llm_service.py  proxies.txt  pyproject.toml  render.yaml  requirements.txt  test_bot_enabled.py  test_bot_stays_enabled.py  test_changes.py  test_config.py  test_final.py  test_fixes.py  test_issues.py
.continue/agents/: new-config.yaml
app/: __init__.py  __main__.py  bot.py  config.py  discord_handlers.py  domain.py  logging_config.py
app/handlers/: admin.py  chat.py
app/repositories/: message_repository.py
app/services/: chat_control_service.py  context_service.py  llm_service.py  proxy_pool.py  proxy_service.py
tools/: check_llm.py  check_proxies.py
