[project]
name = "context-telegram-bot"
version = "0.1.0"
description = "Telegram group chat bot with aiogram, persistent chat context and LLM replies."
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.5,<4.0",
    "aiohttp-socks>=0.8,<1.0",
    "aiosqlite>=0.19,<1.0",
    "openai>=1.30,<2.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["app*"]
