[project]
name = "context-discord-bot"
version = "0.1.0"
description = "Discord bot with persistent chat context and Groq LLM replies."
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4.0",
    "aiosqlite>=0.19,<1.0",
    "openai>=1.30,<2.0",
    "pydantic-settings>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["app*"]
